Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/InvalidNilPrimitiveType.ru
/? Descripción: caso de prueba que verifica que que no se asigne nil a un tipo primitivo
/? Salida esperada:
/? ERROR: SEMÁNTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 9 | COLUMNA 1 | NO ES POSIBLE ASIGNAR NIL A UN TIPO PRIMITIVO

start{
Str a;
a = nil;}